config/agent/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mspsql-agent
  namespace: mspsql-agent
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mspsql-agent
  policyTypes: [Ingress, Egress]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          metrics: enabled
    ports:
    - {protocol: TCP, port: 8080}
  egress:
  - ports:
    - {protocol: TCP, port: 443}
    - {protocol: TCP, port: 6443}
    - {protocol: TCP, port: 8008}
    - {protocol: TCP, port: 8082}
    - {protocol: TCP, port: 8200}
    - {protocol: TCP, port: 9444}
  - ports:
    - {protocol: UDP, port: 51820}
    - {protocol: TCP, port: 53}
    - {protocol: UDP, port: 53}
